feat: tag filter by name
